# smg

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.c  smg.c
.github/workflows/: cmake-single-platform.yml
